// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Linkbox /> spec external linkbox that is opened in to a new tab should not have any basic accessibility issues 1`] = `
<DocumentFragment>
  <div
    aria-label="Linkbox: HDS. Avautuu uudessa välilehdessä. Siirtyy toiseen sivustoon."
    class="linkbox"
    role="region"
    tabindex="0"
  >
    <div
      class="withBackground paddingWithoutImageAndWithBackground contentMedium"
    >
      <div
        aria-level="2"
        class="headingMedium"
        role="heading"
      >
        Linkbox title
      </div>
      <p
        class="text"
      >
        Linkbox text
      </p>
    </div>
    <a
      aria-label="HDS. Avautuu uudessa välilehdessä. Siirtyy toiseen sivustoon."
      class="link"
      href="https://hds.hel.fi"
      rel="noopener"
      tabindex="-1"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="icon l icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M10 3v2H5v14h14v-5h2v7H3V3h7zm11 0v8h-2V6.413l-7 7.001L10.586 12l6.999-7H13V3h8z"
            fill="currentColor"
          />
        </g>
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<Linkbox /> spec renders the component 1`] = `
<DocumentFragment>
  <div
    aria-label="Linkbox: HDS."
    class="linkbox"
    role="region"
    tabindex="0"
  >
    <div
      class="withBackground paddingWithoutImageAndWithBackground contentMedium"
    >
      <div
        aria-level="2"
        class="headingMedium"
        role="heading"
      >
        Linkbox title
      </div>
      <p
        class="text"
      >
        Linkbox text
      </p>
    </div>
    <a
      aria-label="HDS."
      class="link"
      href="https://hds.hel.fi"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="icon l icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <rect
            height="24"
            width="24"
          />
          <polygon
            fill="currentColor"
            points="10.5 5.5 12 7 8 11 20.5 11 20.5 13 8 13 12 17 10.5 18.5 4 12"
            transform="matrix(-1 0 0 1 24.5 0)"
          />
        </g>
      </svg>
    </a>
  </div>
</DocumentFragment>
`;
